syntax = "proto3";

import "google/protobuf/empty.proto";

package parentProfile;

message GetRequest {
  int32 id = 1;
}

message PutRequest {
  int32 id = 1;
  int32 ordersAmount = 2;
}

message UpdateRequest {
  int32 id = 1;
}

message ParentProfile {
  int32 id = 1;
  int32 ordersAmount = 2;
}

message Error {
  string code = 1;
  string message = 2;
}

message ParentProfileResponse {
  optional ParentProfile data = 1;
  optional Error _error = 100;
}

service FuncSitterProfileRpcService {
  rpc get (GetRequest) returns (ParentProfileResponse)
  rpc put (PutRequest) returns (ParentProfileResponse)
  rpc update (UpdateRequest) returns (ParentProfileResponse)
}